[tool.poetry]
name = "bmx"
version = "0.0.2"
description = "Basic Markup eXpressions"
authors = ["Stuart Pullinger <stuartpullinger@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/stuartpullinger/bmx"
repository = "https://github.com/stuartpullinger/bmx"
keywords = ["html", "xml", "templating", "markup"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: XML"
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0.0"
singledispatchmethod = { version="*", python = "<3.8" }
MarkupSafe = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
mypy = "^0.782"
flake8-annotations = "^2.4.0"

[tool.coverage.paths]
source = ["bmx", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["bmx"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
